# nexa

./: .gitignore  LICENSE  README.md
backend/: .env.example  requirements.txt  run.py
backend/app/: dependencies.py  main.py
backend/app/config/: settings.py
backend/app/config/prompts/: rag_addon.txt  system.txt
backend/app/controllers/: chat_controller.py  health_controller.py  ingest_controller.py
backend/app/models/: schemas.py
backend/app/services/: history.py
backend/app/services/ingestion/: chunker.py  ingest_service.py  loader.py
backend/app/services/llm/: base.py  cloud_client.py  ollama_client.py
backend/app/services/rag/: embeddings.py  pipeline.py  vector_store.py
backend/app/views/: api.py
backend/static/: index.html
backend/static/assets/: main-dxh35babf226a9a1bf.css
backend/tests/: conftest.py  test_chat.py  test_chunker.py  test_health.py  test_ingest.py  test_ollama.py  test_schemas.py
frontend/: Cargo.toml  Dioxus.toml
frontend/assets/: main.css
frontend/src/: api.rs  main.rs  models.rs  state.rs
frontend/src/components/: chat_bubble.rs  chat_history.rs  chat_input.rs  confirm_modal.rs  doc_context.rs  header.rs  icons.rs  mod.rs  model_selector.rs  notifications.rs  rich_content.rs  sidebar.rs  status_badge.rs  upload_modal.rs
frontend/src/pages/: chat.rs  documents.rs  mod.rs  settings.rs
scripts/: setup.ps1  setup.sh  start_backend.ps1  start_frontend.ps1  test.ps1
