[package]
name = "nexa-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "=0.7.2", features = ["router"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
tracing = "0.1"
web-sys = { version = "0.3", features = [
    "Blob",
    "BlobPropertyBag",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FileReader",
    "FormData",
    "Headers",
    "HtmlElement",
    "HtmlInputElement",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "Request",
    "RequestInit",
    "Response",
    "TextDecoder",
    "Window",
] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
futures-channel = "0.3"
